Changed font size for phones

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ body {
   text-align: center;
   background-color: var(--main-bg);
   font-family: var(--main-font);
+  font-size: 1rem;
 }
 
 hr {
@@ -340,5 +341,11 @@ Carousel styling
 @media (min-width:1000px) {
   .intro {
     width: 40%;
+  }
+}
+
+@media (max-width:960px) {
+  body {
+    font-size: 2rem;
   }
 }
