Changed font size for phones (working)

--- a/css/styles.css
+++ b/css/styles.css
@@ -338,14 +338,14 @@ Carousel styling
   position: relative;
 }
 
-@media (min-width:1000px) {
-  .intro {
-    width: 40%;
+@media screen and (max-width:960px) {
+  body {
+    font-size: 1.5rem;
   }
 }
 
-@media (max-width:960px) {
-  body {
-    font-size: 2rem;
+@media (min-width:1000px) {
+  .intro {
+    width: 40%;
   }
 }
